0025381: Visualization - XCAFPrs_AISObject ignores visibility flag for sub-shapes

Test case for issue CR25381