src/AIS/AIS_ColoredShape.hxx
@@ -30,12 +30,15 @@ class AIS_ColoredDrawer : public AIS_Drawer
 public:
 
   AIS_ColoredDrawer (const Handle(AIS_Drawer)& theLink)
-  : myHasOwnColor (Standard_False),
+  : myIsHidden    (Standard_False),
+    myHasOwnColor (Standard_False),
     myHasOwnWidth (Standard_False)
   {
     Link (theLink);
   }
 
+  Standard_Boolean IsHidden()    const                              { return myIsHidden; }
+  void             SetHidden (const Standard_Boolean theToHide)     { myIsHidden = theToHide;  }
   Standard_Boolean HasOwnColor() const                              { return myHasOwnColor; }
   void             UnsetOwnColor()                                  { myHasOwnColor = Standard_False; }
   void             SetOwnColor (const Quantity_Color& /*theColor*/) { myHasOwnColor = Standard_True;  }
@@ -45,6 +48,7 @@ public:
 
 public:  //! @name list of overridden properties
 
+  Standard_Boolean myIsHidden;
   Standard_Boolean myHasOwnColor;
   Standard_Boolean myHasOwnWidth;
 
